@@ -16,7 +16,9 @@ Build-Depends: debhelper (>= 9~),
                libstring-random-perl,
                libtest-differences-perl,
                libtest-file-perl (>= 1.30),
-               lsof
+               lsof,
+# Required for building the documentation
+               mkdocs
 Standards-Version: 3.9.6
 Homepage: https://github.com/xtaran/unburden-home-dir
 Vcs-Git: git://github.com/xtaran/unburden-home-dir.git
