@@ -68,7 +68,7 @@ systems and in the \fIetc/\fR directory of the source tar ball.
 \fI/etc/X11/Xsession.d/95unburden-home-dir\fR
 .PP
 Read the documentation at either
-\fI/usr/share/doc/unburden-home-dir/html\fR on debianoid
+\fI/usr/share/doc/unburden-home-dir/site/\fR on debianoid
 installations, at \fIhttp://unburden-home-dir.readthedocs.org/\fR
 online, or in the \fIdocs\fR directory in the source tar ball for an
 explanation of these files.
