@@ -17,6 +17,9 @@ unburden-home-dir (0.4~dev) UNRELEASED; urgency=medium
   * README.md, debian/copyright: take into account that Gitorious closes.
   * Split up documentation into several Markdown files in a separate
     directory. Support mkdocs to generate them.
+    + Add build-dependency on mkdocs.
+    + No more install README.md as documentation.
+    + Drop override for dh_installdocs.
 
  -- Axel Beckert <abe@debian.org>  Fri, 13 Mar 2015 13:11:26 +0100
 
